Make sure dropdown menu is align properly with the dropdown button.

--- a/client/a8c-for-agencies/components/add-new-site-button/style.scss
+++ b/client/a8c-for-agencies/components/add-new-site-button/style.scss
@@ -8,6 +8,8 @@
 	}
 }
 .site-selector-and-importer__popover {
+	margin-inline-start: 32px;
+
 	.popover__inner {
 		width: 280px;
 		text-align: unset;
